--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -4,42 +4,43 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: ./scripts/dev-docker-entrypoint.sh
-    working_dir: /home/app
+      args:
+        IMPORT_TOOL_PATH: ${IMPORT_TOOL_PATH:-./scripts/import_from_c3.py}
+        DB_URL: ${DB_URL:-sqlite:////home/code/hwapi.db}
+        C3_URL: ${C3_URL:-https://certification.staging.canonical.com}
+    command: uvicorn hwapi.main:app --host 0.0.0.0 --port 8080 --reload
+    working_dir: /home/code
     volumes:
-      - .:/home/app
-      - ./data:/home/app/data
+      - ./hwapi:/home/code/hwapi
     ports:
       - "8080:8080"
-    environment:
-      - DB_URL=sqlite:////home/app/data/hwapi-dev.db
 
   hwapi-test:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        IMPORT_TOOL_PATH: ""
+        C3_URL: https://c3_url
+        DB_URL: sqlite:////home/code/test.db
     command: >
       bash -c '
         black --check hwapi/ scripts/ tests/ &&
         ruff check hwapi/ scripts/ tests/ --no-cache &&
         mypy hwapi/ scripts/ tests/ &&
         pytest tests/ -vv'
-    working_dir: /home/app
-    tmpfs:
-      - /home/app/data
+    working_dir: /home/code
     ports:
       - "8080:8080"
-    environment:
-      - TEST_DB_URL=sqlite:////home/app/data/test-hwapi.db
 
   hwapi:
     build:
       context: .
       dockerfile: Dockerfile
-    working_dir: /home/app
-    volumes:
-      - ./data:/home/app/data
+      args:
+        IMPORT_TOOL_PATH: ./scripts/import_from_c3.py
+        DB_URL: sqlite:////home/code/hwapi.db
+        C3_URL: https://certification.canonical.com
+    working_dir: /home/code
     ports:
       - "8080:8080"
-    environment:
-      - DB_URL=sqlite:////home/app/data/hwapi.db
