--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -7,11 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.110.0"
+fastapi = "0.110.1"
 uvicorn = "^0.29.0"
 sqlalchemy = "^2.0.25"
 pydantic = "^2.5.3"
 pyyaml = "^6.0.1"
+requests = "^2.31.0"
+starlette = "0.37.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.0.0"
@@ -19,12 +21,14 @@ ruff = "^0.3.0"
 mypy = "^1.8.0"
 types-pyyaml = "^6.0.12.12"
 pre-commit = "^3.6.0"
+types-requests = "^2.31.0.20240406"
 
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.1.1"
 httpx = "^0.27.0"
 sqlalchemy-utils = "^0.41.2"
+requests-mock = "^1.12.1"
 
 [build-system]
 requires = ["poetry-core"]
