--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -1,13 +1,15 @@
 name: Test client lib and CLI tool
+permissions:
+  contents: read
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
       - client/**
       - Cargo.*
       - ".github/workflows/test_client.yaml"
   pull_request:
-    branches: [ main ]
+    branches: [main]
     paths:
       - client/**
       - Cargo.*
@@ -15,7 +17,6 @@ on:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
-
 
 jobs:
   lint-and-test:
@@ -25,15 +26,17 @@ jobs:
         working-directory: client
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y pkgconf libssl-dev build-essential
-      - uses: actions-rs/toolchain@v1
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@b3b07ba8b418998c39fb20f53e8b695cdcc8de1b # v1
         with:
-          profile: minimal
           toolchain: stable
-          override: true
+          components: rustfmt, clippy
       - run: cargo install cargo-vendor-filterer
       - name: Vendor the dependencies
         run: |
@@ -47,12 +50,8 @@ jobs:
           cat ~/.cargo/config.toml
       - run: cargo build --offline
       - run: cargo check
-      - run: |
-          rustup component add rustfmt
-          cargo fmt --all -- --check
-      - run: |
-          rustup component add clippy
-          cargo clippy --all-features --verbose
+      - run: cargo fmt --all -- --check
+      - run: cargo clippy --all-features --verbose
       - run: cargo clippy --tests --verbose
       - name: Run cargo test
         run: cargo test
@@ -65,20 +64,20 @@ jobs:
     needs: lint-and-test
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y pkgconf libssl-dev build-essential
-      - uses: actions-rs/toolchain@v1
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@b3b07ba8b418998c39fb20f53e8b695cdcc8de1b # v1
         with:
-          profile: minimal
           toolchain: stable
-          override: true
       - uses: actions/setup-python@v5
         with:
           python-version: "3.13"
       - name: Install tox
-        run: |
-          pip install tox
+        run: pip install tox
       - name: Run tox
         run: tox
