fix anonymous-definition errors

--- a/.github/workflows/openapi_gh_pages.yaml
+++ b/.github/workflows/openapi_gh_pages.yaml
@@ -16,6 +16,7 @@ concurrency:
 
 jobs:
   deploy-openapi-html:
+    name: Deploy OpenAPI documentation to GitHub Pages
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
