--- a/.github/workflows/publish_client_crates.yaml
+++ b/.github/workflows/publish_client_crates.yaml
@@ -10,6 +10,7 @@ permissions:
 
 jobs:
   publish:
+    name: Publish hwlib to crates.io
     runs-on: [self-hosted, linux, large, noble, x64]
     steps:
     - name: Checkout code
