--- a/client/hwlib/Cargo.toml
+++ b/client/hwlib/Cargo.toml
@@ -14,13 +14,13 @@ name = "hwlib"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-os-release = { version = "0.1.0" }
-serde_json = { workspace = true }
-ureq = { version = "3.0", features = ["json", "native-tls"], default-features = false }
-serde = { version = "~1.0.0", features = ["derive"] }
-pyo3 = { version = "0.25.0", features = ["extension-module"] }
-smbios-lib = "0.9.0"
 anyhow = { workspace = true }
+minreq = { version = "2.14.0", features = ["native-tls", "json-using-serde"], default-features = false }
+os-release = { version = "0.1.0" }
+pyo3 = { version = "0.25.0", features = ["extension-module"] }
+serde = { version = "~1.0.0", features = ["derive"] }
+serde_json = { workspace = true }
+smbios-lib = "0.9.0"
 
 [dev-dependencies]
 simple_test_case = "1.2.0"
