--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,7 +4,7 @@ resolver = "2"
 exclude = ["debian", "rust-vendor"]
 
 [workspace.package]
-version = "0.9.1"
+version = "0.9.2"
 edition = "2021"
 authors = [
     "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>",
@@ -18,9 +18,14 @@ repository = "https://github.com/canonical/hardware-api/"
 [workspace.dependencies]
 anyhow = "~1.0.0"
 serde_json = "~1.0.0"
-tokio = { version = "1.43.1", default-features = false }
 
 [workspace.metadata.vendor-filter]
 platforms = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu"]
 tier = "2"
 all-features = false
+exclude-crate-paths = [ { name = "*", exclude = "examples" },
+                        { name = "*", exclude = "test" },
+                        { name = "*", exclude = "tests" },
+                        { name = "*", exclude = "test-data" },
+                        { name = "*", exclude = "benches" },
+                      ]
