--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -38,18 +38,7 @@ jobs:
         with:
           toolchain: stable
           components: rustfmt, clippy
-      - run: cargo install cargo-vendor-filterer
-      - name: Vendor the dependencies
-        run: |
-          cargo vendor-filterer rust-vendor
-          cat >>~/.cargo/config.toml << __CONFIG__
-          [source.crates-io]
-          replace-with = "vendored-sources"
-          [source.vendored-sources]
-          directory = "$PWD/rust-vendor"
-          __CONFIG__
-          cat ~/.cargo/config.toml
-      - run: cargo build --offline
+      - run: cargo build
       - run: cargo check
       - run: cargo fmt --all -- --check
       - run: cargo clippy --all-features --verbose
