--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -8,7 +8,7 @@ jobs:
     name: Check CLA
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: read
+      pull-requests: read  # necessary to fetch contributor email
     steps:
       - name: Check if CLA is signed
-        uses: canonical/has-signed-canonical-cla@1399a98cde76a66912c1a75b23f6f306ea814f1c # v2
+        uses: canonical/has-signed-canonical-cla@1c20438ad54b4d37105e777000545881d2293ba4 # 2.2.0
