--- a/.github/workflows/publish_client_crates.yaml
+++ b/.github/workflows/publish_client_crates.yaml
@@ -12,6 +12,9 @@ jobs:
   publish:
     name: Publish hwlib to crates.io
     runs-on: [self-hosted, linux, large, noble, x64]
+    environment: release
+    permissions:
+        id-token: write # Required by the trusted auth
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -43,8 +46,11 @@ jobs:
           echo "Error: Version mismatch between tag ($TAG_VERSION) and Cargo.toml ($CARGO_VERSION)"
           exit 1
         fi
+    - name: Authenticate with crates.io
+      uses: rust-lang/crates-io-auth-action@e919bc7605cde86df457cf5b93c5e103838bd879 # v1.0.1
+      id: auth
     - name: Publish hwlib to crates.io
       env:
-        CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
       working-directory: client
-      run: cargo publish -p hwlib --locked --verbose
+      run: cargo publish --locked --verbose
