--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hwlib"
 description = "Tool for checking Ubuntu hardware certification status"
-version = "0.10.0"
+version = "0.10.1"
 edition = "2021"
 authors = [
     "Canonical Hardware Certification <canonical-hw-cert@lists.launchpad.net>",
@@ -20,13 +20,14 @@ crate-type = ["cdylib", "rlib"]
 [[bin]]
 name = "hwctl"
 path = "bin/hwctl.rs"
+features = ["cli"]
 
 [dependencies]
 anyhow = "~1.0.0"
-clap = { version = "4.5.41", features = ["derive", "env"] }
+clap = { version = "4.5.41", features = ["derive", "env"], optional = true }
 minreq = { version = "2.14.0", features = ["native-tls", "json-using-serde"], default-features = false }
 os-release = { version = "0.1.0" }
-pyo3 = { version = "0.26.0", features = ["extension-module"] }
+pyo3 = { version = "0.26.0", features = ["extension-module"], optional = true }
 serde = { version = "~1.0.0", features = ["derive"] }
 serde_json = "~1.0.0"
 smbios-lib = "0.9.0"
@@ -34,3 +35,7 @@ smbios-lib = "0.9.0"
 [dev-dependencies]
 pretty_assertions = "1.4.1"
 simple_test_case = "1.2.0"
+
+[features]
+cli = ["clap"]
+pybindings = ["pyo3"]
