--- a/.github/workflows/publish_client_crates.yaml
+++ b/.github/workflows/publish_client_crates.yaml
@@ -57,4 +57,4 @@ jobs:
       env:
         CARGO_REGISTRY_TOKEN: ${{ steps.auth.outputs.token }}
       working-directory: client
-      run: cargo publish --locked --verbose
+      run: cargo publish --locked --verbose --all-features
