--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -14,6 +14,7 @@ on:
       - client/**
       - Cargo.*
       - ".github/workflows/test_client.yaml"
+  workflow_dispatch:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
