--- a/.github/workflows/test_server.yaml
+++ b/.github/workflows/test_server.yaml
@@ -12,6 +12,7 @@ on:
     paths:
       - server/**
       - ".github/workflows/test_server.yaml"
+  workflow_dispatch:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
