--- a/.github/workflows/test_client.yaml
+++ b/.github/workflows/test_client.yaml
@@ -6,14 +6,13 @@ on:
     branches: [main]
     paths:
       - client/**
-      - Cargo.*
       - ".github/workflows/test_client.yaml"
   pull_request:
     branches: [main]
     paths:
       - client/**
-      - Cargo.*
       - ".github/workflows/test_client.yaml"
+  workflow_dispatch:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -45,6 +44,22 @@ jobs:
       - run: cargo clippy --all-features --tests --verbose
       - name: Run cargo test
         run: cargo test --all-features
+      - run: cargo install cargo-llvm-cov
+      - name: Run coverage tests
+        run: cargo llvm-cov --all-features --cobertura --output-path=coverage.xml
+      - name: Upload coverage.xml as an artifact
+        uses: actions/upload-artifact@v5
+        with:
+          name: client_coverage
+          path: client/coverage.xml
+          if-no-files-found: error
+          retention-days: 2
+      - name: Upload coverage to codecov
+        uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7 # v5.5.1
+        with:
+          files: client/coverage.xml
+          flags: client
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   py-bindings-test:
     name: Test Python bindings
