--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -30,6 +30,19 @@ sqlalchemy-utils = "^0.41.2"
 requests-mock = "^1.12.1"
 pytest-cov = "^6.0.0"
 
+[tool.ruff]
+lint.extend-select = [
+    "FAST", # fastapi
+    "A",    # flake8-builtins
+    "S",    # flake8-bandit (security)
+    "SIM",  # flake8-simplify
+    "B",    # flake8-bugbear
+    "I",    # isort
+]
+
+[tool.ruff.lint.per-file-ignores]
+"**/tests/**.py" = ["S101"]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
