--- a/.github/workflows/test_server.yaml
+++ b/.github/workflows/test_server.yaml
@@ -25,25 +25,20 @@ jobs:
       run:
         working-directory: server
     steps:
-      - name: Checkout repo & submodules
+      - name: Checkout
         uses: actions/checkout@v6
         with:
           persist-credentials: false
-          submodules: true
-      - name: Install docker-compose
-        run: |
-          COMPOSE_URL="https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)"
-          echo "Downloading docker-compose from $COMPOSE_URL"
-          sudo curl -L  -L $COMPOSE_URL -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          echo `docker-compose --version`
-      - name: Restart dockerd
-        run: sudo systemctl restart docker
-      - name: Run tests with docker-compose
-        run: |
-          docker-compose up --attach-dependencies --abort-on-container-exit hwapi-test
-          sudo chown $USER -R coverage
-          sudo chgrp $USER -R coverage
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.13"
+      - name: Install dependencies
+        run: sudo apt-get install -yqq python3-poetry tox
+      - name: Lint
+        run: tox run -e lint
+      - name: Unit
+        run: tox run -e unit
       - name: Upload coverage.xml as an artifact
         uses: actions/upload-artifact@v5
         with:
