--- a/server/charm/pyproject.toml
+++ b/server/charm/pyproject.toml
@@ -43,5 +43,5 @@ max-complexity = 10
 skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"
 
 [tool.pyright]
-include = ["src/**.py"]
-
+extraPaths = ["lib"]
+include = ["src", "tests"]
