--- a/server/charm/tox.ini
+++ b/server/charm/tox.ini
@@ -4,7 +4,7 @@
 [tox]
 no_package = True
 skip_missing_interpreters = True
-env_list = format, lint, static, unit
+env_list = format, lint, unit
 min_version = 4.0.0
 
 [vars]
@@ -35,10 +35,12 @@ description = Check code against coding style standards
 deps =
     ruff
     codespell
+    pyright
 commands =
     codespell {tox_root}
     ruff check {[vars]all_path}
     ruff format --check --diff {[vars]all_path}
+    pyright {posargs}
 
 [testenv:unit]
 description = Run unit tests
@@ -55,14 +57,6 @@ commands =
                  {posargs} \
                  {[vars]tests_path}/unit
     coverage report
-
-[testenv:static]
-description = Run static type checks
-deps =
-    pyright
-    -r {tox_root}/requirements.txt
-commands =
-    pyright {posargs}
 
 [testenv:integration]
 description = Run integration tests
