--- a/server/charm/tox.ini
+++ b/server/charm/tox.ini
@@ -6,6 +6,8 @@ no_package = True
 skip_missing_interpreters = True
 env_list = format, lint, unit
 min_version = 4.0.0
+requires =
+    tox-uv>=1.25.0
 
 [vars]
 src_path = {tox_root}/src
@@ -32,10 +34,11 @@ commands =
 
 [testenv:lint]
 description = Check code against coding style standards
-deps =
-    ruff
-    codespell
-    pyright
+runner = uv-venv-lock-runner
+dependency_groups =
+    lint
+    unit
+    integration
 commands =
     codespell {tox_root}
     ruff check {[vars]all_path}
@@ -44,10 +47,9 @@ commands =
 
 [testenv:unit]
 description = Run unit tests
-deps =
-    pytest
-    coverage[toml]
-    -r {tox_root}/requirements.txt
+runner = uv-venv-lock-runner
+dependency_groups =
+    unit
 commands =
     coverage run --source={[vars]src_path} \
                  -m pytest \
@@ -60,11 +62,9 @@ commands =
 
 [testenv:integration]
 description = Run integration tests
-deps =
-    pytest
-    juju
-    pytest-operator
-    -r {tox_root}/requirements.txt
+runner = uv-venv-lock-runner
+dependency_groups =
+    integration
 commands =
     pytest -v \
            -s \
