--- a/server/terraform/.gitignore
+++ b/server/terraform/.gitignore
@@ -1,1 +1,15 @@
-.terraform
+.terraform/
+*.tfstate
+*.tfstate.*
+crash.log
+crash.*.log
+*.tfvars
+*.tfvars.json
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraform.tfstate.lock.info
+.terraformrc
+terraform.rc
+*.lock.hcl
